Fix: filter side drawer got stuck in an invalid state when switching views

--- a/src/app/debug/filter-side-drawer/filter-side-drawer.component.css
+++ b/src/app/debug/filter-side-drawer/filter-side-drawer.component.css
@@ -20,7 +20,6 @@
   margin: 1rem 1rem;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   flex-grow: 4;
   overflow-y: auto;
   max-height: 800px;
